--- a/css/styles.css
+++ b/css/styles.css
@@ -133,9 +133,11 @@
     }
     
     .liststudio-current {
-    color:var(--color1)
+    
+    color:var(--color1);
+    
     } 
-
+    
     .headlist{
     display: flex;
     margin-left: auto;
@@ -164,12 +166,22 @@
     color: #757575;
     }
 
+    
     /*Решения для бизнеса*/
     
     .businessection {
-    background-color: #2F303A;
+    width: 1600px;
+    height: 600px;
     color: #FFFFFF;
     text-align: center;
+    background-color: #2F303A;
+    
+    background-position: center;
+    background-image: linear-gradient(
+     to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4) ),
+     url('../images/Img1.jpg');
     }
     
     
@@ -187,6 +199,7 @@
     font-style: normal;
     text-align: center;
     text-transform: uppercase;
+    
     }
 
     
@@ -244,6 +257,7 @@
     display: inline-block;
     width: 270px;
     margin: 14px;
+
     }
 
     .details {
