--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,9 @@
     color: #757575;
     }
 
-    
+    .icon-svg{
+        background: aqua;
+    }
     /*Решения для бизнеса*/
     
     .businessection {
